# OpenSource-Ai-Glasses

./: .gitignore  CONTRIBUTING.md  PROJECT_STRUCTURE.md  README.md  README.zh.md
Applications/: ai-core  ai_media_service  display  guard  launch
HTTP_example/: post_example.c
SDK/ai_glass_sdk/: README.md  VERSION
SDK/ai_glass_sdk/docs/: Audio_Client_API.md  Camera_Client_API.md  GPIO_Client_API.md  Log_API.md  README.md
SDK/ai_glass_sdk/include/: ai_audio.h  ai_camera.h  ai_gpio.h  ai_ipc.h  ai_log.h
Streaming Audio Playback Test/: audio_server.c  readme.txt
album_sync_WiFi/: ai_media_service.c
docs/: APPLICATION_DEVELOPMENT.en.md  APPLICATION_DEVELOPMENT.md  DOCKER_DEPLOYMENT.en.md  DOCKER_DEPLOYMENT.md  FIRMWARE_FLASHING.en.md  FIRMWARE_FLASHING.md  README.md  _config.yml
docs/templates/: README-template.md  firmware-doc-template.md  hardware-spec-template.md
examples/audio_streaming/: audio_client.py
examples/live_broadcast/: Readme.txt
examples/video_recorder/: simple_vi_bind_venc_with_A
firmware/display/: README_POWER_SAVE.md
firmware/launcher/TouchPadManager/: CMakeCache.txt  CMakeLists.txt
firmware/scripts/: S99wifi  adb push.txt  expect.sh
firmware/src/display/: hal_driver.c  (+2 more)
firmware/src/ffm_launcher/: CMakeLists.txt
live broadcast/: simple_vi_bind_venc
main/TouchPadManager/: launch.cpp
samples/http/: compile_cmd.txt
script/: start_wifi.sh
src/display/: Makefile  font.c  font.h  jbd013_api.h
src/ffm_launcher/: CMakeCache.txt  launch.cpp
src/touchpad_manager/: toolchain-arm.cmake
src5/: bat_capacity.h  main.c
(+32 files in other folders)
